src/objects/VCCD_Response__c.object
<CustomObject>
    <description>The Purpose of this object is to store incoming VCCD Request Details</description>
    <fields>
        <fullName>AccountNumber__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>AccountNumber</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AcctManagerPhone__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>AcctManagerPhone</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ani__c</fullName>
        <description>The Purpose of this field is to Capture Contact Number</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Ani</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CallReason__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>CallReason</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CallerId__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>CallerId</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Caller_Type__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Caller Type</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ClaimId__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>ClaimId</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ClaimsDOSMD__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>ClaimsDOSMD</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DOB__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>DOB</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Employer__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Employer</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FaroId__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>FaroId</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HIPPAFlag__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>HIPPAFlag</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IsOptum__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This Flag is Used to check if the Optum Bank record  or not</description>
        <label>IsOptum</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MSID__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>MSID</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MemberId__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>MemberId</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NPI__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>NPI</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Payer__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Payer</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProcedureID__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>ProcedureID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProductType__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>ProductType</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QuestionTypeCode__c</fullName>
        <description>This field will store the Question Type code from VCCD Request</description>
        <encryptionScheme>None</encryptionScheme>
        <label>QuestionType Code</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QuestionTypeTopic__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>QuestionType Topic</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QuestionType__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>QuestionType</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SSN__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>SSN</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Skill__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Skill</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>State</label>
        <length>70</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SubjectDOB__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>SubjectDOB</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>TFN__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>TFN</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TaxId__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>TaxId</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ucid__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Ucid</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VisionClaimID__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>VisionClaimID</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zip__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Zip</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>claimsDOS__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>claimsDOS</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>dentalClaimID__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>dentalClaimID</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>dnis__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>dnis</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>eligibilityTypeCode__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>eligibilityTypeCode</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>firstName__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>firstName</label>
        <length>70</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>groupID__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>groupID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>isActive__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This Flag is Used to check if the Current record is Active or not</description>
        <label>isActive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>isSpire__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This Flag is used to check if the current record belongs to Spire or Not</description>
        <label>isSpire</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>lastName__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>lastName</label>
        <length>70</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>legacyProviderId__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>legacyProviderId</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>producerID__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>producerID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rcKeyCallId__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Caller Type</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <label>VCCD Response</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>VCCD-{0000000000}</displayFormat>
        <label>VCCD Response Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>VCCD Responses</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>